# ros2-humble-navstack-vstone-x40a

./: .gitignore  .gitmodules  CMakeLists.txt.bak  README.md  package.xml  package.xml.bak
docs/: livox-mid360-connection-guide.md  vstone-x40a-specifications.md
maps/: README.md  x40a_lab.pgm  x40a_lab.yaml
rviz/: navigation.rviz
scripts/: setup_x40a_device.sh
src/rover_bringup/: CMakeLists.txt  package.xml
src/rover_bringup/config/: livox_config.json  vstone_params.yaml
src/rover_bringup/launch/: hardware_bringup.launch.py  livox_driver.launch.py  robot_state_display.launch.py  vstone_base.launch.py
src/rover_bringup/rviz/: robot_state.rviz
src/rover_description/: CMakeLists.txt  README.md  package.xml
src/rover_description/config/: ros2_controllers.yaml
src/rover_description/launch/: robot_state_publisher.launch.py
src/rover_description/urdf/: rover_x40a.gazebo.xacro  rover_x40a.urdf.xacro  rover_x40a_official.urdf.xacro
src/rover_gazebo/: CMakeLists.txt  package.xml
src/rover_gazebo/launch/: gazebo_sim.launch.py
src/rover_gazebo/worlds/: indoor_warehouse.world
src/rover_navigation/: CMakeLists.txt  package.xml
src/rover_navigation/config/: nav2_params.yaml  slam_params.yaml
src/rover_navigation/launch/: rover_navigation.launch.py
src/rover_navigation/maps/: x40a_lab.pgm  x40a_lab.yaml
src/rover_waypoints/: CMakeLists.txt  package.xml
src/rover_waypoints/launch/: waypoint_demo.launch.py
src/rover_waypoints/scripts/: waypoint_follower.py
