<?xml version="1.0"?>
<package format="3">
  <name>ros2_humble_navstack_vstone_x40a</name>
  <version>1.0.0</version>
  <description>Production-ready ROS 2 Humble navigation stack for Vstone 4WDS Rover X40A</description>
  <maintainer email="user@example.com">Rover Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rover_description</exec_depend>
  <exec_depend>rover_navigation</exec_depend>
  <exec_depend>rover_bringup</exec_depend>
  <exec_depend>rover_gazebo</exec_depend>
  <exec_depend>rover_waypoints</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>