<?xml version="1.0"?>
<package format="3">
  <name>rover_description</name>
  <version>1.0.0</version>
  <description>URDF description for Vstone 4WDS Rover X40A</description>
  <maintainer email="user@example.com">Rover Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>mecanum_drive_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>mecanumrover_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>