<?xml version="1.0"?>
<package format="3">
  <name>rover_gazebo</name>
  <version>1.0.0</version>
  <description>Gazebo simulation for Vstone 4WDS Rover X40A</description>
  <maintainer email="user@example.com">Rover Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>rover_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>